--- a/public_html/main.html
+++ b/public_html/main.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <div id="page">
-        <div id="title"><h2> Link </h2></div>
+        <div id="title"><h2> Link </h2>
+        </div>
         <div id="inputCol">
             <div class="fixArea">
                 <div>
@@ -22,28 +23,20 @@
         </div>
         <div id="outputCol">
              <div class="wrapper">
-
-            <div id="historyMsg">
-            </div>
-            <div class="controls" >
-                <div class="items">
-                    <input id="colorStyle" type="color" placeHolder='#000' title="font color" />
-                    <input id="emoji" type="button" value="emoji" title="emoji" />
-                    <label for="sendImage" class="imageLable">
-                        <input type="button" value="image"  />
-                        <input id="sendImage" type="file" value="image"/>
-                    </label>
-                    <input id="clearBtn" type="button" value="clear" title="clear screen" />
+                <div id="historyMsg">
                 </div>
-                <textarea id="messageInput" placeHolder="enter to send"></textarea>
-                <input id="sendBtn" type="button" value="SEND">
-                <div id="emojiWrapper">
+                <div class="controls" >
+                    <div class="items">
+                        <input id="colorStyle" type="color" placeHolder='#000' title="font color" />
+                        <label for="sendImage" class="imageLable">
+                            <input type="button" value="image"  />
+                            <input id="sendImage" type="file" value="image"/>
+                        </label>
+                    </div>
+                    <textarea id="messageInput" placeHolder="enter to send"></textarea>
+                    <input id="sendBtn" type="button" value="SEND">
                 </div>
             </div>
-        </div>
-
-
-
         </div>
     </div>
     <script src="/codeHome.js"></script>
