--- a/public_html/index.html
+++ b/public_html/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
   <meta charset="utf-8"/>
-  <link rel="stylesheet" type="text/css" href="/style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
   <script src="/code.js"></script>
-  <title>Login</title>
+  <title>Link</title>
 </head>
 <body>
   
   <div id="page">
-  <h1> Ostaa </h1>
+  <div id="title"><h2> Link </h2></div>
   <h1> Login </h1>
   <div>
     <label for="lusername">Username</label>
