--- a/public_html/main.html
+++ b/public_html/main.html
@@ -19,26 +19,38 @@
 
 
                 </div>
+                <input class="groupB" id="groupBt" type="button" value="group">
             </div>
         </div>
+
+
         <div id="outputCol">
-             <div class="wrapper">
-                <div id="historyMsg">
+            <div class="wrapper">
+            <div class="banner">
+                <span id="status"></span>
+            </div>
+            <div id="historyMsg">
+            </div>
+            <div class="controls" >
+                <div class="items">
+                    <input id="colorStyle" type="color" placeHolder='#000' title="font color" />
+                    <input id="emoji" type="button" value="emoji" title="emoji" />
+                    <label for="sendImage" class="imageLable">
+                        <input type="button" value="image"  />
+                        <input id="sendImage" type="file" value="image"/>
+                    </label>
+                    <input id="clearBtn" type="button" value="clear" title="clear screen" />
                 </div>
-                <div class="controls" >
-                    <div class="items">
-                        <input id="colorStyle" type="color" placeHolder='#000' title="font color" />
-                        <label for="sendImage" class="imageLable">
-                            <input type="button" value="image"  />
-                            <input id="sendImage" type="file" value="image"/>
-                        </label>
-                    </div>
-                    <textarea id="messageInput" placeHolder="enter to send"></textarea>
-                    <input id="sendBtn" type="button" value="SEND">
+                <textarea id="messageInput" placeHolder="enter to send"></textarea>
+                <input id="sendBtn" type="button" value="SEND">
+                <div id="emojiWrapper">
                 </div>
             </div>
+        </div>
         </div>
     </div>
     <script src="/codeHome.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="scripts/hichat.js"></script>
 </body>
 </html>
