--- a/public_html/main.html
+++ b/public_html/main.html
@@ -49,8 +49,7 @@
         </div>
         </div>
     </div>
-    <script src="/codeHome.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="scripts/hichat.js"></script>
+    <script src="/codeMain.js"></script>
 </body>
 </html>
