--- a/public_html/main.html
+++ b/public_html/main.html
@@ -19,7 +19,7 @@
 
 
                 </div>
-                <input class="groupB" id="groupBt" type="button" value="group">
+                <button class="groupB" id="groupBt" onclick="createGroup()">create group</button>
             </div>
         </div>
 
@@ -50,6 +50,7 @@
         </div>
     </div>
     <script src="/socket.io/socket.io.js"></script>
+    <script src="./code.js"></script>
     <script src="/codeMain.js"></script>
 </body>
 </html>
